feat: add contract reset and deprecate flows
Refs #40
